2009-11-15	Mike Massonnet
=== Release 1.1.2 ===

	Update credits in the about dialog.
	Fix version of documentation (1.0.1) it will need an update.

2009-11-15	Mike Massonnet
[daemon] Rewrite the daemon using GTK+ functions

	The gsd-clipboard-manager has been rewritten using GTK+ functions. The
	X11 manager showed bugs with text selections and images not converted
	correctly. Also this new manager takes care about the primary clipboard.

2009-11-15	Mike Massonnet
[tests/test-targets] Print format/length of targets

2009-11-07	Mike Massonnet
[tests] Add daemon test program

	New test program for the daemon. The targets test program has a command
	line flag to switch between the selections and the default clipboard.

2009-10-31	Mike Massonnet
Fix popup from keyboard shortcut not always working #bug 5909

	Factorize the popup action inside plugin.c(plugin_popup_menu) and add
	a menu position function callback pointer within the MyPlugin
	structure.
	Add workaround from xfdesktop for the popup action called through a
	keyboard shortcut.

2009-09-30	Mike Massonnet
=== Release 1.1.1 ===

2009-09-17	Mike Massonnet
Add info regarding the pattern entry

	- panel-plugin/settings-dialog.glade:
		Add a label under the pattern entry to inform about the
		G_REGEX_ANCHORED flag.

2009-09-12	Mike Massonnet
Change default option 'ignore selections' to true

2009-09-12	Mike Massonnet
New option 'ignore selections'

	- panel-plugin/settings-dialog.glade:
		Detached the Exclude selections from history option from the
		Sync selections and move it down to the History frame as
		Ignore selections.
	- panel-plugin/xfce4-clipman-settings.c:
		Drop the binding between sync selections and the ignore
		selections checkbox sensitivity.
	- panel-plugin/collector.c:
		Catch the selections in addition if the ignore selections is
		false as it is now independant from the sync selections
		option.

2009-09-03	Mike Massonnet
=== Release 1.1.0 ===

2009-07-28	Mike Massonnet